--- a/static/css/student_signup.css
+++ b/static/css/student_signup.css
@@ -801,14 +801,14 @@ body.no-scroll {
     margin-top: 2px;
 }
 
-.btn-capture {
-    margin: 0 auto 30px;
+.btn-capture, .btn-take-photo {
+    margin: 0 auto 15px;
     min-width: 240px;
     padding: 18px 32px;
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-capture:hover {
+.btn-capture:hover, .btn-take-photo:hover {
     transform: translateY(-3px) scale(1.02);
     box-shadow: 
         0 12px 30px rgba(0, 198, 255, 0.3),
